--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon  -e  ts  --exec ts-node  ./app.ts",
-    "start": "ts-node app.ts",
+    "env-dev": "NODE_ENV=development",
+    "dev": "NODE_ENV=development nodemon  -e  ts  --exec ts-node  src/app.ts",
+    "start": "ts-node src/app.ts",
     "server": "pm2 start dist/app.js --name portal-server",
     "prepare": "husky install"
   },
@@ -15,13 +16,16 @@
   "dependencies": {
     "@koa/router": "^10.1.1",
     "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0"
+    "koa-bodyparser": "^4.3.0",
+    "log4js": "^6.4.6",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.4",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa__router": "^8.0.11",
+    "@types/mysql": "^2.15.21",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "commitlint": "^16.2.4",
