--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "log4js": "^6.4.6",
     "module-alias": "^2.2.2",
     "mysql": "^2.18.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "qcloud-cos-sts": "^3.1.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.4",
