--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-jwt": "^4.0.3",
     "koa-static": "^5.0.0",
+    "koa2-cors": "^2.0.6",
     "log4js": "^6.4.6",
     "module-alias": "^2.2.2",
     "mysql": "^2.18.1",
@@ -36,6 +37,7 @@
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-static": "^4.0.2",
+    "@types/koa2-cors": "^2.0.2",
     "@types/koa__router": "^8.0.11",
     "@types/module-alias": "^2.0.1",
     "@types/mysql": "^2.15.21",
