--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@koa/router": "^10.1.1",
     "fs-extra": "^10.1.0",
@@ -28,6 +28,7 @@
     "module-alias": "^2.2.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.4",
+    "node-schedule": "^2.1.0",
     "qcloud-cos-sts": "^3.1.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/koa__router": "^8.0.11",
     "@types/module-alias": "^2.0.1",
     "@types/mysql": "^2.15.21",
+    "@types/node-schedule": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "commitlint": "^16.2.4",
